modifications des méthodes déja pusher et ajout des classses pour la Q4 et Q5